# memento-french

./: CMakeLists.txt  README.md
dict/: dict_preprocess.py
doc/: dictionary.md
src/: main.cpp
src/anki/: ankiclient.cpp  ankiclient.h  ankiconfig.h
src/audio/: audioplayer.cpp  audioplayer.h
src/dict/: CMakeLists.txt  dictionary.cpp  dictionary.h  dictreader.cpp  dictreader.h  expression.h  frenchprocessor.cpp  frenchprocessor.h
src/gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/gui/widgets/: mpvwidget.cpp  subtitlewidget.cpp  subtitlewidget.h
src/gui/widgets/definition/: CMakeLists.txt  definitionwidget.cpp  definitionwidget.h  termwidget.cpp  termwidget.h  termwidget.ui
src/gui/widgets/settings/: CMakeLists.txt  ankisettings.cpp  ankisettings.h  audiosourcesettings.cpp  interfacesettings.ui  optionswindow.cpp
src/util/: constants.h  directoryutils.cpp  directoryutils.h  globalmediator.cpp  globalmediator.h
